# face-caption

./: .gitignore  OBS_SETUP.md  README.md  config.json  download_face_landmarker_model.py  download_hand_landmarker_model.py  download_vosk_model.py  face_captions.py  face_mesh.py  hand_landmarker.py  list_mics.py  obs_window.json  realtime_stt.py  requirements.txt  test_deepgram.py  test_deepgram_key.py  test_deepgram_ws.py
OBS-Plugin/: CMakeLists.txt  README.md
OBS-Plugin/cmake/: FindSIMDe.cmake
OBS-Plugin/scripts/: check-transitive-deps.ps1  copy-missing-deps.ps1  deep-dep-check.ps1  deploy-to-obs.ps1  download_haarcascade.ps1  download_vosk_model.ps1  download_vosk_model_large.ps1  list-plugin-dependencies.ps1  run-obs-from-build.ps1  test-load-plugin.ps1  verify-obs-plugin-folder.ps1
OBS-Plugin/src/: caption-renderer.cpp  caption-renderer.hpp  face-captions-filter.cpp  face-captions-filter.hpp  face-detector.cpp  face-detector.hpp  kalman-tracker.cpp  kalman-tracker.hpp  plugin-main.cpp  stt-vosk.cpp  stt-vosk.hpp
